# skills

./: README.md  github-invoices.skill  invoice-filing.skill  invoice-recovery.skill  onshape-ptc-invoices.skill  openerp-soldes-fin-trimestre.skill  qonto-justificatifs-manquants.skill  stockage-justificatifs-qonto.skill
.claude/: settings.json
Move-download-mcp/: package-lock.json  package.json
Move-download-mcp/mcp-move-download/: README.md  package.json  server.js
OpenERP-mcp/mcpb-bundle/: .mcpbignore  README.md  build-mcpb.ps1  build-mcpb.sh  manifest.json  openerp-mcp.mcpb  pyproject.toml
OpenERP-mcp/mcpb-bundle/src/openerp_mcp/: config.py
OpenERP-mcp/odoo-client-lib/: .upstream-commit  pyproject.toml
OpenERP-mcp/odoo-client-lib/odoolib/: rpc.py
OpenERP-mcp/openerp-mcp-server/: .env.example  README.md  bootstrap.ps1  bootstrap.sh  mcp-client-config.example.json  pyproject.toml
OpenERP-mcp/openerp-mcp-server/openerp_mcp/: __init__.py  business.py  connection.py  server.py
OpenERP-mcp/openerp-mcp-server/scripts/: e2e_mcp_test.py  smoke_test.py
OpenERP-mcp/openerp-mcp-server/tests/: test_business_layer.py  test_connection.py
