[project]
name = "openerp-mcp-server"
version = "0.1.0"
description = "MCP server exposing OpenERP 7 / Odoo via odoo-client-lib, HTTPS-forced behind Traefik, with a neutral business layer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Calcool" }]
dependencies = [
    "mcp>=1.2.0",
    "odoo-client-lib",
    "httpx>=0.23.2",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[project.scripts]
openerp-mcp = "openerp_mcp.server:main"

# The patched odoo-client-lib is not on PyPI; resolve it from the vendored wheel.
[tool.uv.sources]
odoo-client-lib = { path = "vendor/odoo_client_lib-2.0.1+calcool.311-py3-none-any.whl" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["openerp_mcp"]

[tool.setuptools.package-data]
openerp_mcp = ["py.typed"]
